fix https://github.com/LeaVerou/contrast-ratio/issues/10

--- a/style.css
+++ b/style.css
@@ -20,27 +20,30 @@ a {
 
 body > h1 {
 	margin-bottom: 1.3em;
-	text-indent: -1.7em;
 	text-transform: lowercase;
 	letter-spacing: -1px;
-	word-spacing: -.25em;
 	line-height: 1.3;
 }
 
-	body > h1 span,
-	body > h1 strong {
-		padding: .1em .4em;
-	}
+    body > h1 a {
+        margin-left: -1.7em;
+    }
 
-	body > h1 span {
-		background: black;
-		color: white;
-	}
+        body > h1 span,
+        body > h1 strong {
+            padding: .1em .4em;
+            display: inline-block;
+        }
 
-	body > h1 strong {
-		background: white;
-		color: black;
-	}
+        body > h1 span {
+            background: black;
+            color: white;
+        }
+
+        body > h1 strong {
+            background: white;
+            color: black;
+        }
 
 label {
 	position: absolute;
